# Prog3_Project

./: CMakeLists.txt  Date.cpp  Date.h  DateTests.cpp  Date_Operators.cpp  Date_Static.cpp  Date_Static_Tests.cpp  Date_Tests.cpp  FileOps.h  Fridge.cpp  Fridge.h  Fridge_Base_Tests.cpp  Fridge_put.cpp  Item.cpp  Item.h  ItemTests.cpp  Orders.h  README.txt  Shelf.cpp  Shelf.h  main.h  test2.txt
Headers/: Date.h  FileOps.h  Fridge.h  Item.h  Orders_Generators.h  Shelf.h
Kod/: Date.cpp  Date_Operators.cpp  Date_Static.cpp  FileOps.cpp  Fridge.cpp  Fridge_GetSet.cpp  Fridge_put.cpp  Item.cpp  Orders.cpp  Shelf.cpp
Tests/: BigTest.cpp  Date_Static_Tests.cpp  Date_Tests.cpp  FileOps_Tests.cpp  Fridge_Base_Tests.cpp  ItemTests.cpp  Orders_Adv_Tests.cpp  Orders_Base_Tests.cpp  Orders_Tests.cpp  Shelf_Tests.cpp
